--- a/css/estilo.css
+++ b/css/estilo.css
@@ -8,6 +8,15 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   overflow-x: hidden; }
 
+.destacado {
+  text-align: center; }
+
+.imagenEnvios {
+  text-align: center; }
+
+.imagenPagos {
+  text-align: center; }
+
 .imagenDestaca {
   border: 3px black solid; }
   .imagenDestaca:hover {
@@ -34,11 +43,9 @@ body {
 
 /*Fin estilo header*/
 /*Inicio estilo contacto*/
-.mapaEntregas {
-  border-right: 2px black  solid; }
-  .mapaEntregas:hover {
-    transform: scale(1.2);
-    transition: all 0.5s ease; }
+.mapaEntregas:hover {
+  transform: scale(1.2);
+  transition: all 0.5s ease; }
 
 .accordion {
   max-width: 90%;
@@ -73,4 +80,11 @@ h5 {
 /*Fin Estilo del footer*/
 @media (max-width: 768px) {
   #intro {
-    width: 90% !important; } }
+    width: 90% !important; }
+  .mapaEntregas:hover {
+    transform: scale(1.2);
+    transition: all 0.5s ease; }
+  .imagenEntregas {
+    text-align: center; }
+  .textDestaca {
+    text-align: center; } }
