--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -14,6 +14,16 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     overflow-x: hidden;
 }
+.destacado{
+    text-align: center
+}
+.imagenEnvios{
+    text-align: center;
+}
+.imagenPagos{
+    text-align: center;
+}
+
 .imagenDestaca{
     @include bordeImg();
     &:hover{
@@ -39,4 +49,17 @@ body{
     #intro {
         width: 90% !important;
     }
+    .mapaEntregas{        
+        &:hover{
+            transform: $animacion_img;
+            transition: $transicion_img;
+            }
+        }
+    .imagenEntregas{
+        text-align: center;
+    }
+    .textDestaca{
+        text-align: center
+    }
+    
 }
